--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -493,6 +493,15 @@ button:focus, .btn:focus {
   }
 }
 
+@media screen and (max-height: 600px) {
+  .station-detail-status {
+    display: none;
+  }
+  #standDetailSection {
+    max-height: 322px;
+  }
+}
+
 @media screen and (max-width: 1200px) {
   body {
     font-size: 1em;
@@ -546,5 +555,27 @@ button:focus, .btn:focus {
 @media screen and (max-width: 600px) {
   #standInfoSection {
     width: 93%;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  body {
+    font-size: 0.9em;
+  }
+  h1 {
+    font-size: 1.5em;
+  }
+  #standDetailSection {
+    flex-direction: column;
+  }
+  #standDetailSection i {
+    display: none;
+  }
+  #standDetailSection p {
+    margin: 0;
+    text-align: center;
+  }
+  .station-detail-address {
+    display: block;
   }
 }
